# justwatch-cli

./: README.md  jw.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pylint.yml
justwatch-cli/: jw.py
